[package]
name = "galactic-unicorn-embassy"
version = "0.5.0"
edition = "2021"
homepage = "https://github.com/domneedham/pimoroni-unicorn-rs"
repository = "https://github.com/domneedham/pimoroni-unicorn-rs"
authors = ["Dominic Needham"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
pio = "0.2"
pio-proc = "0.2"
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.2.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
] }
embassy-executor = { version = "0.6.3", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
fixed = "1.23.1"
fixed-macro = "1.2"

embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3.3"

unicorn-graphics = { version = "0.2.1", path = "unicorn-graphics" }

defmt = "0.3"
defmt-rtt = "0.4"

[dev-dependencies]
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
micromath = "2.0.0"
heapless = "0.8.0"

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[profile.release]
debug = 2
lto = true
opt-level = "z"

[[example]]
name = "scrolling_text"

[[example]]
name = "balls"
